--- a/src/tiles/file-download/file-download.scss
+++ b/src/tiles/file-download/file-download.scss
@@ -9,24 +9,27 @@
         text-transform: uppercase;
         letter-spacing: 1.5px;
         color:$white;
-        margin-bottom: 20px;
+        margin-bottom: 24px;
+        @include lg{
+            margin-bottom: 40px;
+        }
     }
     .file-wrapper{
         display: flex;
         width:100%;
         align-items: center;
-        margin-bottom:15px;
+        margin-bottom:14px;
         &:last-of-type{
             .content-wrap{
                 border-bottom-width: 0;
             }
             margin-bottom: 0px;
         @include lg(){
-            margin-bottom: 30px;
+            margin-bottom: 32px;
         }
         }
         .download-icon{
-            margin-right: 10px;
+            margin-right: 16px;
             padding-bottom:15px;
             line-height: 1;
             i{
