--- a/src/widgets/card-list/card-list.scss
+++ b/src/widgets/card-list/card-list.scss
@@ -28,7 +28,7 @@
         }
     }
     &__content {
-        padding: 15px 16px 78px;
+        padding: 15px 16px 82px;
         @include md {
             padding: 24px 24px 94px ;
         }
