--- a/src/widgets/contact/contact.scss
+++ b/src/widgets/contact/contact.scss
@@ -4,7 +4,7 @@
     float: left;
     width:100%;
     @include lg(){
-        padding:30px;
+        padding:32px 32px 40px 40px;
     }
     h6{
         @include font-size($xxs-font);
@@ -24,7 +24,7 @@
     }
     img{
         width:auto;
-        margin-bottom:30px;
+        margin-bottom:32px;
         max-height: 125px;
         float: left;
         border-radius: 5px;
